--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first website</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Welcome to HTML</h1>
-    <h2>Understanding the Basics</h2>
-    <p>
-      HTML is the language that we use to structuce the different parts of our
-      content
-    </p>
-    <a href="#">Click here for a more detailed HTML guide</a>
-  </body>
-</html>
+---
+layout: home
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+---
